# PoojaBlogChat

./: .gitignore  Cargo.toml  Dockerfile  LICENCE.txt  README.md  docker-compose.yml  index.html  styles.css  tailwind.config.js
backend/: Cargo.toml  Dockerfile  docker-compose.yml  models.rs  repositories.rs
backend/migrations/2023-11-25-001941_create_rustaceans/: up.sql
backend/migrations/2023-11-25-001948_create_crates/: up.sql
backend/migrations/2023-11-26-054241_create_user/: up.sql
backend/migrations/2023-11-27-004833_create_rustaceans/: up.sql
backend/migrations/2023-11-27-201041_create_users/: up.sql
backend/migrations/2023-11-27-201053_create_roles/: up.sql
backend/migrations/2023-11-27-201101_create_users_roles/: down.sql  up.sql
backend/src/: auth.rs  commands.rs  lib.rs  main.rs  models.rs  repositories.rs  schema.rs
backend/src/rocket_routes/: authorization.rs  mod.rs  rustaceans.rs
backend/tests/: authorization.rs
backend_modified/: Cargo.toml
backend_modified/src/: build.rs  main.rs
src/: app.rs  main.rs  models.rs  repositories.rs
src/api/: mod.rs  user.rs
src/components/: header.rs  input.rs  login_form.rs
src/pages/: home.rs  home_page.rs  login.rs  login_page.rs  not_found.rs  register_page.rs
