[package]
name = "pooja_blog_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
diesel = { version = "2.1.4", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
gloo-console = "0.3.0"
gloo-net = "0.4.0"
gloo-storage = "0.3.0"
serde = "1.0.193"
serde_json = "1.0.108"
validator = { version = "0.16.1", features = ["derive"] }
web-sys = { version = "0.3.65", features = ["HtmlInputElement","HtmlSelectElement", "HtmlTextAreaElement"] }
yew = { version = "0.21.0", features = ["csr"] }
mio = { version = "0.8.9", features = ["os-poll", "net"] }
rocket = { version = "0.5.0", features = ["json"] }


