[package]
name = "pooja_blog_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
"backend_modified",
"common",
]
[dependencies]
gloo-console = "0.3.0"
gloo-net = "0.4.0"
log = "0.4.20"
reqwasm = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.65", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
