[package]
name = "pooja_blog_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
gloo = "0.10.0"
gloo-console = "0.3.0"
gloo-net = "0.4.0"
log = "0.4.20"
reqwasm = "0.5.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
validator = { version = "0.16.1", features = ["derive"] }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.65", features = ["HtmlInputElement", "Window"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.9.4"
