[package]
name = "backend"
default-run = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
chrono = { version = "0.4.31", features = ["serde"] }
clap = "4.4.9"
diesel = { version = "2.1.4", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["diesel_postgres", "deadpool_redis"] }
serde = "1.0.193"
serde_json = "1.0.108"
tokio = "1.34.0"

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json", "blocking"] }